# dsl

./: .gitignore  Dockerfile  LICENSE  Makefile  MyTestL.hs  README.org  ToProlog.hs  about-the-lex-numbers-branch.org  challenges.org  l4.bnfc  mkProlog.hs  potato.pl  rando.hs  test1.l4  test2.l4
.github/workflows/: docker-publish.yml  haskell.yml  test.yml
NLG/: .gitignore  ChangeLog.md  README.md  nlg.cabal  package.yaml  stack.yaml  test.sh
NLG/src/: Action.gf  ActionEng.gf  Bike.gf  BikeEng.gf  Gastronomy.gf  GastronomyEng.gf  Rule.gf  RuleEng.gf  RuleEngBase.gf  SAFE.gf  SAFEEng.gf  Term.gf  TermEng.gf  Top.gf  TopEng.gf
NLG/test/: basic.GOLD  basic.gfs  bike.GOLD  bike.gfs  negation.GOLD  negation.gfs  safe.GOLD  safe.gfs
bnfc/: .envrc  .gitattributes  .gitignore  ChangeLog.md  Makefile  README.html  README.org  bnfc.cabal  flake.nix  graph.dot  hie.yaml  l4-dsl-bnfc.cabal  l4.bnfc  package.yaml  shell.nix  stack.yaml
bnfc/app/: Main.hs
bnfc/blah/: Matchable.hs  Preds.hs
bnfc/core-language/: Makefile  Parser.y  README.org  core-language.cabal  hie.yaml  l4.bnfc
bnfc/core-language/l4/: cr.l4  cr_considerations.txt  drive_considerations.txt  test.l4
bnfc/core-language/src/: AbsSyntax.hs  ExampleInput.hs  Exec.hs  InterfaceNunchaku.hs  Lexer.hs  Lexer.x  Lexer_new.x  Main.hs  Parser.hs  Parser.info  Parser.y  RuleToTa.hs  Syntax.hs  TaToUppaal.hs  Test.hs  TransL.hs  Typing.hs
bnfc/core_language/: AbsSyntax.hs  Exec.hs  TaToUppaal.hs  Test.hs  TransL.hs  Typing.hs
bnfc/diamond/: shell.nix  test.bnfc
bnfc/l4/: ContractLaw.l4  deon_bike.l4  deon_bike.l4.gold  deon_bike_meng.l4  deon_bike_meng.l4.gold  deon_bike_meng_detail.l4  test.l4  test1.l4  test1.l4.gold  test4.l4  test4.l4.gold  test5.l4  (+4 more)
docker/: Dockerfile.dsl-ci
grammars/: Bike.gf  BikeEng.gf  Gastronomy.gf  GastronomyEng.gf  README.org  Rule.gf  RuleEng.gf  SAFEEng.gf  Term.gf  expected-01.txt  expected-02.txt
graphviz/: knightStates.dot  pawnStates.dot
(+1209 files in other folders)
