name:                core-language
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/core-language#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.org

library
  exposed-modules:
                  -- generated
                  Lexer
                  Parser
                  -- from src
                  Syntax
                  --ExampleInput
                  --Exec
                  --RuleToTa
                  --TaToUppaal
                  -- Typing
                  -- from src-bnfc
                  AbsL
                  ErrM
                  LayoutL
                  LexL
                  ParL
                  PrintL
                  SkelL
                  -- from src-l4
                  L4
  hs-source-dirs:
     src
     src-bnfc
     src-l4
  build-depends:       base >= 4.7 && < 5
                     , array
                     , pretty-simple
                     , split
                     , text
                     -- required for lexer and parser
                     , haskeline  >= 0.7
                     , mtl        >= 2.2 && <2.4
  default-language: Haskell2010
                       
executable core-language
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , array
                     , haskeline  >= 0.7
                     , mtl        >= 2.2 && <2.4
  build-tools:         alex, happy
  other-modules:
                Lexer,
                Parser,
                Syntax
                
                